extras/envoy-dkv/dkv-config-static.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener
    address:
      socket_address: { address: 127.0.0.1, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: dkv-route-config
            virtual_hosts:
            - name: dkv-master
              domains: ["dkv-master"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: dkv-master }
            - name: dkv-slave
              domains: ["dkv-slave"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: dkv-slave }
          http_filters:
          - name: envoy.router
  clusters:
  - name: dkv-master
    connect_timeout: 10s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: dkv-master
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
  - name: dkv-slave
    connect_timeout: 10s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: dkv-slave
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9090
